feat: add main stages of the pipeline
- remove hugo files (I will start from scratch)
- added sample files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "loguru (>=0.7.3,<0.8.0)",
     "openai (>=1.97.1,<2.0.0)",
     "python-dotenv (>=1.1.1,<2.0.0)",
+    "pypdf2 (>=3.0.1,<4.0.0)",
 ]
 
 [tool.poetry]
