--- a/config.yaml
+++ b/config.yaml
@@ -3,3 +3,5 @@ debug: false
 number_of_articles: 10 # Number of articles to fetch from arxiv
 
 number_of_analyses: 5 # Number of times LLM select the best article
+
+output_dir: "output" # Directory to save the output files
