feat: improve prompt after reading google paper

--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,12 @@
 debug: false
 
-openai_model_name: gpt-4.1
+# Check out all the models here: https://platform.openai.com/docs/models
+openai_model_name: gpt-4.1-nano 
 
 number_of_articles: 10 # Number of articles to fetch from arxiv
 
-number_of_analyses: 5 # Number of times LLM select the best article
-
 output_dir: "output" # Directory to save the output files
+
+select_best_article:
+    # Number of times LLM select the best article. Related to the technique "Self-consistency".
+    reasoning_paths: 1
