--- a/app/themes/hugo-PaperMod/theme.toml
+++ b/app/themes/hugo-PaperMod/theme.toml
@@ -16,37 +16,37 @@ tags = [
   "blog",
   "minimalist",
   "highlight.js",
-  "search"
+  "search",
 ]
 features = [
   "responsive",
   "single-column",
   "blog",
   "cover-image",
-  "table-of-contents",
+  # "table-of-contents",
   "opengraph",
   "highlight.js",
   "favicon",
-  "archive",
-  "share-icons",
+  # "archive",
+  # "share-icons",
   "cover",
-  "multilingual",
-  "social-icons",
+  # "multilingual",
+  # "social-icons",
   "minified-assets",
   "theme-toggle",
   "menu-location-indicator",
   "scroll-to-top",
-  "search"
+  # "search"
 ]
 min_version = "0.146.0"
 
 [author]
-  name = "Aditya Telange"
-  homepage = "https://github.com/adityatelange/"
+name = "Aditya Telange"
+homepage = "https://github.com/adityatelange/"
 
 # If porting an existing theme
 [original]
-  name = "Paper"
-  author = "nanxiaobei"
-  homepage = "https://github.com/nanxiaobei"
-  repo = "https://github.com/nanxiaobei/hugo-paper/"
+name = "Paper"
+author = "nanxiaobei"
+homepage = "https://github.com/nanxiaobei"
+repo = "https://github.com/nanxiaobei/hugo-paper/"
