--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,11 @@ dependencies = [
     "python-dotenv (>=1.1.1,<2.0.0)",
     "pypdf2 (>=3.0.1,<4.0.0)",
     "poethepoet (>=0.36.0,<0.37.0)",
+    "jsonschema (>=4.25.0,<5.0.0)",
 ]
+
+[project.optional-dependencies]
+dev = ["pytest (>=8.4.1,<9.0.0)"]
 
 [tool.poetry]
 package-mode = false
