--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,3 +33,4 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poe.tasks]
 app = "hugo server -D --source app"
+pipe = "python run_pipeline.py"
