--- a/app/config.yml
+++ b/app/config.yml
@@ -16,7 +16,6 @@ mainsections: ["posts"]
 
 minify:
   disableXML: true
-  # minifyOutput: true
 
 pagination:
   disableAliases: false
@@ -26,23 +25,6 @@ languages:
   blog:
     languageName: "Blog"
     weight: 1
-  # about:
-  #   languageName: "About"
-  #   weight: 2
-  #   params:
-  #     languageAltTitle: About
-  #     profileMode:
-  #       enabled: true
-  #       title: Alberto Ursino
-  #       imageUrl: "https://raw.githubusercontent.com/googlefonts/noto-emoji/master/svg/emoji_u1f9d1_1f3fb_200d_1f4bb.svg"
-  #       subtitle: "🚀 I'm a software engineer passionate about astronomy 🌌"
-  #       buttons:
-  #         - name: Blog Wiki
-  #     socialIcons:
-  #       - name: github
-  #         url: https://github.com/albertoursino
-  #       - name: LinkedIn
-  #         url: https://www.linkedin.com/in/alberto-ursino-8b3466161/
 
 outputs:
   home:
@@ -72,9 +54,9 @@ params:
   images: []
 
   homeInfoParams:
-    Title: "Welcome to **Singularity Notes**! 👋"
+    Title: "Welcome to Singularity Notes! 🌌"
     Content: >
-      A fully automated blog delivering bite-sized articles on the latest astronomy discoveries—crafted by AI and driven by cutting-edge research. Developed by [Alberto Ursino](https://github.com/albertoursino).
+      A fully automated blog delivering bite-sized articles on the latest astronomy discoveries—crafted by AI and driven by cutting-edge research. [Give a star on GitHub!](https://github.com/albertoursino/singularity-notes) ⭐
     
 
   # socialIcons:
