--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "singularity-notes"
 version = "0.1.0"
-description = "Fully automated blog delivering articles written by AI on the latest astronomy discoveries."
+description = "Fully automated blog delivering posts written by AI on the latest astronomy discoveries."
 authors = [{ name = "Alberto Ursino", email = "Alberto.Ursino@k-ai.at" }]
 readme = "README.md"
 requires-python = ">=3.13, <4.0"
