--- a/config.yaml
+++ b/config.yaml
@@ -4,7 +4,7 @@ debug: false
 # Check out all OpenAI models here: https://platform.openai.com/docs/models
 model: gpt-5
 
-# Number of articles to fetch from arXiv
+# Number of articles to fetch from arXiv (https://arxiv.org/)
 number_of_articles: 50
 
 # Number of retries if the model doesn't give a well-formatted response
