refactor codebase, implement uv
move files

remove debug option

update docs

refactor tests

update poe command

fix poe command

fix imports

refactor stages

remove article processor

remove validate_json_data function

ci: update env creation

refactor codebase

--- a/.github/workflows/cron_job.yml
+++ b/.github/workflows/cron_job.yml
@@ -24,7 +24,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install --user -r requirements.txt
+          pip install uv
+          uv pip install --system -r <(uv export --format=requirements-txt)
 
       - name: Run pipeline
         run: poe pipe
@@ -36,7 +37,7 @@ jobs:
         with:
           name: pipeline-outputs
           path: |
-            used_articles.json
+            src/singularity_notes/resources/used_articles.json
             app/content/posts
 
   push_artifacts:
