--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,22 +1,13 @@
 repos:
-  - repo:
-      https://github.com/python-poetry/poetry-plugin-export
-    rev: 1.9.0
-    hooks:
-      - id: poetry-export
-        args: [-f, requirements.txt, -o, requirements.txt, --without-hashes]
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    # Ruff version.
     rev: v0.14.1
     hooks:
-      # Run the linter.
       - id: ruff-check
         args: [ --fix ]
-      # Run the formatter.
       - id: ruff-format
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.18.2
     hooks:
       - id: mypy
-        args: [--strict, --install-types, --non-interactive, --ignore-missing-imports]
+        args: [--ignore-missing-imports]
         additional_dependencies: [tokenize-rt==3.2.0]
