--- a/config.yaml
+++ b/config.yaml
@@ -1,14 +1,8 @@
-# Whether or not to use the OpenAI API
-debug: false
-
 # Check out all OpenAI models here: https://platform.openai.com/docs/models
 model: gpt-5
 
 # Number of articles to fetch from arXiv (https://arxiv.org/)
 number_of_articles: 200
 
-# Number of retries if the model doesn't give a well-formatted response
+# Number of retries if the model doesn't return a valid JSON
 max_retries: 5
-
-# Number of times LLM select the best article. Related to the technique "Self-consistency".
-reasoning_paths: 1
