--- a/.github/workflows/cron_job.yml
+++ b/.github/workflows/cron_job.yml
@@ -16,11 +16,11 @@ jobs:
         uses: actions/checkout@v5
         with:
           ref: gh-pages
-      
+
       - name: Install Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.13'
+          python-version: "3.13"
 
       - name: Install dependencies
         run: |
@@ -53,14 +53,14 @@ jobs:
         uses: actions/download-artifact@v5
         with:
           name: pipeline-outputs
-      
+
       - name: Commit artifacts to "gh-pages"
         run: |
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "GitHub Actions Bot"
           git add .
           git commit -m "chore: new post"
-      
+
       - name: Push artifacts to "gh-pages"
         uses: ad-m/github-push-action@master
         with:
