--- a/config.yaml
+++ b/config.yaml
@@ -7,5 +7,5 @@ number_of_articles: 200
 # Number of retries if the model doesn't give a well-formatted response
 max_retries: 5
 
-# Number of times LLM select the best article. Related to the technique "Self-consistency".
+# Number of times LLM select the best article
 reasoning_paths: 1
