--- a/config.yaml
+++ b/config.yaml
@@ -4,8 +4,5 @@ model: gpt-5
 # Number of articles to fetch from arXiv (https://arxiv.org/)
 number_of_articles: 200
 
-# Number of retries if the model doesn't give a well-formatted response
+# Number of retries if the model doesn't return a valid JSON
 max_retries: 5
-
-# Number of times LLM select the best article
-reasoning_paths: 1
